# hadolint-wrapper

./: .gitignore  Dockerfile.example  LICENSE  README.md  hadolint.py  justfile  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: publish.yml  publish.yml.bak
hadolintw/: main.py
scripts/: create_brew_package.py  upload_github_release_asset.sh
