[tool.poetry]
name = "hadolintw"
version = "1.2.1"
description = "Pretty output for hadolint"
authors = ["Miguel Ibars <mperezibars@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikybars/hadolint-wrapper"

[tool.poetry.dependencies]
python = "^3.6.0"
click = ">=5.0"

[tool.poetry.scripts]
hadolintw = 'hadolintw.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
